--- a/CommonLibrary/src/main/res/values/colors.xml
+++ b/CommonLibrary/src/main/res/values/colors.xml
@@ -1,16 +1,331 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-
+<resources xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="MissingDefaultResource">
+    <color name="colorPrimary">#ffffff</color>
+    <color name="colorPrimaryDark">#ffffff</color>
+    <color name="colorAccent">@color/color_2e2e32</color>
+    <color name="tt_white">#ffffff</color>
+    <color name="color_white_50">#50FFFFFF</color>
+    <color name="color_white_90">#90FFFFFF</color>
+    <color name="color_white_78">#78FFFFFF</color>
+    <color name="color_white_26">#26FFFFFF</color>
 
     <color name="color_white">#FFFFFF</color>
+    <color name="color_7affffff">#7AFFFFFF</color>
+    <color name="color_e6ffffff">#E6FFFFFF</color>
+    <color name="color_3d3e40">#3D3E40</color>
+    <color name="color_4d3d3e40">#4D3D3E40</color>
+    <color name="color_5c3d3e40">#5C3D3E40</color>
+    <color name="color_transparent">#00FFFFFF</color>
+    <color name="color_ff292a2d">#FF292A2D</color>
+    <color name="color_B3292a2d">#B3292A2D</color>
+    <color name="color_ffb9bbc3">#FFB9BBC3</color>
+    <color name="color_ff58595f">#58595F</color>
+    <color name="color_91e075b4">#91E075B4</color>
+    <color name="color_fff5f7f9">#F5F7F9</color>
+    <color name="color_ffff8a9b">#FF8A9B</color>
+    <color name="color_6db8f0">#6DB8F0</color>
+    <color name="color_ffb3f1">#FFB3F1</color>
+    <color name="color_eb1d1d1e">#EB1D1D1E</color>
+    <color name="color_66FF8A9B">#66FF8A9B</color>
+    <color name="color_781c1c1d">#781C1C1D</color>
+    <color name="color_800c0c0c">#800C0C0C</color>
+    <color name="color_50ffff8a9b">#50FF8A9B</color>
+    <color name="color_ff63646a">#FF63646A</color>
+    <color name="color_fff3f6f9">#FFF3F6F9</color>
+    <color name="color_ffc9d0d8">#FFC9D0D8</color>
+    <color name="color_ff6958">#FF6958</color>
+    <color name="color_66505050">#66505050</color>
     <color name="color_black">#000000</color>
-    <color name="color_transparent">#00000000</color>
+    <color name="color_2a2c2d">#2A2C2D</color>
+    <color name="color_42black">#42000000</color>
+    <color name="color_80000000">#80000000</color>
+    <color name="color_86000000">#86000000</color>
+    <color name="color_17000000">#17000000</color>
+    <color name="color_black_24">#24000000</color>
+    <color name="color_black_20">#33000000</color>
+    <color name="color_black_30">#30000000</color>
+    <color name="color_black_70">#70000000</color>
+    <color name="color_black_86">#86000000</color>
+    <color name="color_black_80">#80000000</color>
+    <color name="color_black_66">#66000000</color>
+    <color name="color_black_50">#50000000</color>
+    <color name="color_black_18">#18000000</color>
+    <color name="color_77ff8a9b">#77FF8A9B</color>
+    <color name="color_black_76">#C2000000</color>
+    <color name="color_black_03">#08000000</color>
+    <color name="color_black_14">#24000000</color>
+    <color name="color_383d48">#FF383D48</color>
+    <color name="color_757e91">#FF757E91</color>
+    <color name="color_f1f4f9">#F1F4F9</color>
+    <color name="color_eceff3">#ECEFF3</color>
+    <color name="color_80while">#CCFFFFFF</color>
+    <color name="color_73c8cfde">#73C8CFDE</color>
+    <color name="color_e8dee6f5">#E8DEE6F5</color>
+    <color name="color_eef1f6">#EEF1F6</color>
+    <color name="color_6f737b">#6F737B</color>
+    <color name="color_ffb645">#FFB645</color>
+    <color name="color_f3f5f8">#F3F5F8</color>
+    <color name="color_f2ff6d">#F2FF6D</color>
+    <color name="color_bcbec2">#BCBEC2</color>
+    <color name="color_8eff88">#8EFF88</color>
+    <color name="color_e3e5e8">#E3E5E8</color>
+    <color name="color_e4ecf5">#E4ECF5</color>
+    <color name="color_d8d8d8">#D8D8D8</color>
+    <color name="color_85f0ba">#85F0BA</color>
+    <color name="color_ffb583">#FFB583</color>
+    <color name="color_ff7979">#FF7979</color>
+    <color name="color_f9fafd">#F9FAFD</color>
+    <color name="color_d3d7d9">#D3D7D9</color>
+    <color name="color_d0d3ca">#D0D3CA</color>
+    <color name="color_e47ec0">#E47EC0</color>
+    <color name="color_bdc3c8">#BDC3C8</color>
+    <color name="color_bbbdc0">#BBBDC0</color>
+    <color name="color_e6f1f14f">#E651514F</color>
+    <color name="color_6b6b65">#6B6B65</color>
+    <color name="color_9ce280b3">#9CE280B3</color>
 
+    <color name="color_ffe0e3e6">#FFE0E3E6</color>
+    <color name="color_fff6f6f6">#FFF6F6F6</color>
+    <color name="color_63a2ba">#63A2BA</color>
+    <color name="color_ffe5e7ec">#FFE5E7EC</color>
+    <color name="color_999999">#999999</color>
+    <color name="color_1A000000">#1A000000</color>
+    <color name="color_E5ffffff">#E5ffffff</color>
+    <color name="color_gray_fff3f4f8">#fff3f4f8</color>
+    <color name="color_pink_ffffeef1">#ffffeef1</color>
+    <color name="color_pink_ffff8a9b">#ffff8a9b</color>
+    <color name="font_color_FF7685">#FF7685</color>
+    <color name="color_C5C9CD">#C5C9CD</color>
+    <color name="color_9c9da2">#9C9DA2</color>
+    <color name="color_52_252527">#85252527</color>
+
+    <color name="color_b6b8c1">#FFB6B8C1</color>
+    <color name="color_f7f8fb">#FFF7F8FB</color>
+    <color name="color_bg_FAF1DB">#FFF7DC</color>
+    <color name="color_ff7568" >#FF7568</color>
+    <color name="color_F1F1F1">#F1F1F1</color>
+    <color name="color_fff1f3">#FFF1F3</color>
+    <color name="color_66606F58">#66606F58</color>
+    <color name="color_e5eaef">#E5EAEF</color>
+    <color name="color_d7dce3">#D7DCE3</color>
+    <color name="color_bdf7ffe5">#BDF7FFE5</color>
+    <color name="color_ecf0f8">#ECF0F8</color>
+    <color name="color_9ea3a9">#9EA3A9</color>
+    <color name="color_EDF0F2">#EDF0F2</color>
+    <color name="color_2B262F">#2B262F</color>
+    <color name="color_C0C0C0">#C0C0C0</color>
+    <color name="color_e0e0e8">#E0E0E8</color>
+    <color name="color_f1f3f7">#F1F3F7</color>
+    <color name="color_5a5c68">#5A5C68</color>
+    <color name="color_edeff3">#FFEDEFF3</color>
+    <color name="color_ff7685">#FF7685</color>
+    <color name="color_00FFFFFF">#00FFFFFF</color>
+    <color name="color_FF8A9B">#FF8A9B</color>
+    <color name="color_403d43">#403d43</color>
+    <color name="color_e3e6ef">#E3E6EF</color>
+    <color name="color_292A2D">#292A2D</color>
+    <color name="color_2e2e32">#2E2E32</color>
+    <color name="color_e6ebf3">#E6EBF3</color>
+    <color name="color_2e2a2a">#272A2A</color>
+    <color name="color_45_27292b">#7327292B</color>
+    <color name="color_9a9aa0">#9A9AA0</color>
+    <color name="color_f3f6fa">#F3F6FA</color>
+    <color name="color_d4d8e0">#D4D8E0</color>
+    <color name="color_80292A2D">#80292A2D</color>
+    <color name="color_FFCBCB">#FFCBCB</color>
+    <color name="color_FF6C6C">#FF6C6C</color>
+    <color name="color_C4C5C9">#C4C5C9</color>
+    <color name="color_7a7e52">#7A7E52</color>
+    <color name="color_A6AAB4">#A6AAB4</color>
+    <color name="color_E5E7EC">#E5E7EC</color>
+    <color name="color_e5e7ea">#E5E7EA</color>
+    <color name="color_a3a8b0">#A3A8B0</color>
+    <color name="color_9133353c">#9133353c</color>
+    <color name="color_f2f2f2">#f2f2f2</color>
+    <color name="color_FFDDE1">#FFDDE1</color>
+    <color name="color_ee9dff">#EE9DFF</color>
+    <color name="color_e6eaf3">#E6EAF3</color>
+    <color name="color_e8ecf0">#E8ECF0</color>
+    <color name="color_7f8085">#7F8085</color>
+    <color name="color_eceff1">#ECEFF1</color>
+    <color name="color_587d56">#587D56</color>
+    <color name="color_e4e6ec">#E4E6EC</color>
+    <color name="color_FD8A591">#FD8A59</color>
+    <color name="chat_text_color">#0B1816</color>
+    <color name="color_FFF8D0">#FFF8D0</color>
+    <color name="bg_color_4d000000">#4D000000</color>
+    <color name="bg_color_66000000">#66000000</color>
+    <color name="color_FF9ABC">#FF9ABC</color>
+    <color name="color_8DB8FF">#8DB8FF</color>
+    <color name="color_8EDFAD">#8EDFAD</color>
+    <color name="color_C0AAFF">#C0AAFF</color>
+
+    <color name="color_F5D4A7">#F5D4A7</color>
+    <color name="yellow_FFCC9B">#FFCC9B</color>
+    <color name="yellow_FF9686">#FF9686</color>
+    <color name="yellow_b565a9">#B565A9</color>
+    <color name="yellow_FF9889">#FF9889</color>
+    <color name="color_99000000">#99000000</color>
+
+    <color name="color_77b9bbc3">#77B9BBC3</color>
+    <color name="color_80ffffff">#80ffffff</color>
+    <color name="color_fffff2f4">#FFFFF2F4</color>
+    <color name="color_A7000000">#A7000000</color>
+    <color name="color_7fff8a9b">#7FFF8A9B</color>
+    <color name="color_ffb6b9c4">#FFB6B9C4</color>
+    <color name="color_ffdee0eb">#FFDEE0EB</color>
+    <color name="color_ffadb2be">#FFADB2BE</color>
+    <color name="color_FFF4CA">#FFF4CA</color>
+    <color name="color_FFFBF0">#FFFBF0</color>
+    <color name="color_DC8D5B">#DC8D5B</color>
+    <color name="color_ff675c">#FF675C</color>
+    <color name="color_FFE798">#FFE798</color>
+    <color name="color_EBEBEB">#EBEBEB</color>
+    <color name="color_ebeef5">#EBEEF5</color>
+    <color name="color_ebedf0">#EBEDF0</color>
+    <color name="color_D1D1D1">#D1D1D1</color>
+    <color name="color_1d1d1f">#1D1D1F</color>
+    <color name="color_008C1B">#008C1B</color>
+    <color name="color_FF9881">#FF9881</color>
+    <color name="color_898b93">#898B93</color>
+    <color name="color_FFF5C8">#FFF5C8</color>
+    <color name="color_B8F6FAFF">#B8F6FAFF</color>
+    <color name="color_ffd7d7d7">#FFD7D7D7</color>
+    <color name="color_ffe3e3e3">#FFE3E3E3</color>
+    <color name="color_fffff1f1">#FFFFF1F1</color>
+    <color name="color_fff8f8f8">#FFF8F8F8</color>
+    <color name="color_ffe4e4e8">#FFE4E4E8</color>
+    <color name="color_ff9089f3">#FF9089F3</color>
+    <color name="color_ffd8d8d8">#FFD8D8D8</color>
+    <color name="color_C4CBD1">#C4CBD1</color>
+    <color name="color_FFDA54">#FFFFDA54</color>
+    <color name="color_ff7a7a">#FFFF7A7A</color>
+    <color name="color_FFF8E8">#FFF8E8</color>
+    <color name="color_c7c7c7">#FFC7C7C7</color>
+    <color name="color_D9D9D9">#D9D9D9</color>
+    <color name="color_d9dbe0">#D9DBE0</color>
+    <color name="color_FFFFB826">#FFFFB826</color>
+    <color name="color_0082DF">#0082DF</color>
+    <color name="color_42B9EC">#42B9EC</color>
+    <color name="color_f6f6f6">#f6f6f6</color>
+    <color name="color_B3FFFFFF">#B3FFFFFF</color>
+    <color name="color_cfcfcf">#cfcfcf</color>
+    <color name="color_262626">#262626</color>
+    <color name="color_cdcdcd">#cdcdcd</color>
+    <color name="color_f9f9f9">#f9f9f9</color>
+    <color name="color_f5f7f9">#f5f7f9</color>
+    <color name="color_C4E3FF">#C4E3FF</color>
+    <color name="color_D6FFBC">#D6FFBC</color>
+    <color name="color_CEE4FF">#CEE4FF</color>
+    <color name="color_FFECCE">#FFECCE</color>
+    <color name="color_f2f4f8">#F2F4F8</color>
+    <color name="color_FFD7E0">#FFD7E0</color>
+    <color name="color_FFD7F2">#FFD7F2</color>
+    <color name="color_BB626E">#BB626E</color>
+    <color name="color_9F7E6B">#9F7E6B</color>
+    <color name="color_C3C5CB">#C3C5CB</color>
+    <color name="color_CE4B3E">#CE4B3E</color>
+    <color name="color_fffff4f7">#FFFFF4F7</color>
+    <color name="color_fff0f2">#fff0f2</color>
+    <color name="font_color_fff2f3">#FFFFF2F3</color>
+    <color name="color_adb2be">#ADB2BE</color>
+    <color name="color_FF448DFF">#FF448DFF</color>
+    <color name="color_26000000">#26000000</color>
+    <color name="color_33000000">#33000000</color>
+    <color name="color_C2AF6D">#C2AF6D</color>
+    <color name="color_e2e6">#FFE2E6</color>
+    <color name="color_pink_e4de">#FFE4DE</color>
+    <color name="color_c0c2c4">#C0C2C4</color>
+    <color name="color_74B9DF">#74B9DF</color>
+    <color name="color_timer_default">#E9829C</color>
+    <color name="color_4e4846">#4E4846</color>
+    <color name="color_F0F1F5">#F0F1F5</color>
+    <color name="color_F9FBFE">#F9FBFE</color>
+    <color name="color_2D2D2D">#2D2D2D</color>
+    <color name="color_BBBCCB">#BBBCCB</color>
+    <color name="color_B3BBC1">#B3BBC1</color>
+    <color name="color_F5F9FF">#F5F9FF</color>
+    <color name="color_ffcad2">#FFCAD2</color>
+    <color name="color_f3f6f9">#F3F6F9</color>
+    <color name="color_64656D">#64656D</color>
+    <color name="color_FFF2F4">#FFF2F4</color>
+    <color name="color_e2e4eb">#E2E4EB</color>
+    <color name="color_E7E9F0">#E7E9F0</color>
+    <color name="color_ffaf3c">#FFAF3C</color>
+    <color name="color_ff8047">#FF8047</color>
+    <color name="color_e7ebf2">#E7EBF2</color>
+    <color name="color_f1f4f8">#f1f4f8</color>
+    <color name="color_F9FAFC">#F9FAFC</color>
+    <color name="color_e2e8f4">#FCE2E8F4</color>
+    <color name="color_f1f4fb">#F1F4FB</color>
+    <color name="color_fcf1f4fb">#FCF1F4FB</color>
+    <color name="color_E5EBF6">#FCE5EBF6</color>
+    <color name="color_F9FBFF">#F9FBFF</color>
+    <color name="color_E8E5E5E5">#E8E5E5E5</color>
+    <color name="color_21E5E5E5">#21E5E5E5</color>
+    <color name="color_404041">#404041</color>
+    <color name="color_79A3C5">#79A3C5</color>
+    <color name="color_FFADD8">#FFADD8</color>
+    <color name="color_DD8FC1">#DD8FC1</color>
+    <color name="color_D8A3AC">#D8A3AC</color>
+    <color name="color_F7F8FE">#F7F8FE</color>
+    <color name="color_ff7f7f">#FF7F7F</color>
+    <color name="color_9999a4">#9999a4</color>
+    <color name="color_cce7ebf2">#CCE7EBF2</color>
+    <color name="color_a9aab0">#A9AAB0</color>
+    <color name="alibrary_text_color_pink_FF8A9B">#FF8A9B</color>
+    <color name="alibrary_line_color_grave_E5E7EC">#E5E7EC</color>
+    <color name="color_ff9c9da2">#FF9C9DA2</color>
+    <color name="color_a2a6ac">#A2A6AC</color>
+    <color name="color_c3c3c8">#C3C3C8</color>
+    <color name="color_ced1d7">#CED1D7</color>
+    <color name="color_c1e6ff">#C1E6FF</color>
+    <color name="color_bfa1ff">#BFA1FF</color>
+    <color name="color_fb92ff">#FB92FF</color>
+    <color name="color_c2e7ff">#C2E7FF</color>
+    <color name="color_ffde5f">#FFDE5F</color>
+    <color name="color_ffdd5c">#FFDD5C</color>
+    <color name="color_d5ddea">#D5DDEA</color>
+    <color name="color_ff7f62">#FF7F62</color>
+    <color name="color_ffda4d">#FFDA4D</color>
+    <color name="color_fb99ff">#FB99FF</color>
+    <color name="color_cbb2ff">#CBB2FF</color>
+    <color name="color_b7e2ff">#B7E2FF</color>
+    <color name="color_232121">#232121</color>
+    <color name="color_47212124">#47212124</color>
+    <color name="color_DBDFE4">#DBDFE4</color>
+    <color name="color_b9b9c0">#B9B9C0</color>
+    <color name="color_BA8EFF">#BA8EFF</color>
+    <color name="color_0d8fdf">#0d8fdf</color>
+    <color name="color_6ab5e2">#6AB5E2</color>
+    <color name="color_99ffffff">#99ffffff</color>
+    <color name="color_C9CDD8">#C9CDD8</color>
+    <color name="color_2B3036">#2B3036</color>
+    <color name="color_b3000000">#b3000000</color>
+    <color name="color_FFFADD">#FFFADD</color>
+    <color name="color_EBF1F7">#EBF1F7</color>
+    <color name="color_66000000">#66000000</color>
+    <color name="color_F7F9FC">#F7F9FC</color>
+    <color name="color_6F737B">#6F737B</color>
+    <color name="color_dialog_top">#29000000</color>
+    <color name="color_E5E9EC">#E5E9EC</color>
+    <color name="color_FFED77">#FFED77</color>
+    <color name="color_FFA853">#FFA853</color>
+    <color name="color_A1ACA7">#A1ACA7</color>
+    <color name="color_C7D0D1">#C7D0D1</color>
+    <color name="color_1C2326">#1C2326</color>
+    <color name="color_FF722C">#FF722C</color>
+    <color name="color_CBD7D7">#CBD7D7</color>
+    <color name="color_ACB9BA">#ACB9BA</color>
+    <color name="color_7D7D81">#7D7D81</color>
+    <color name="color_3E434C">#3E434C</color>
+
+    <color name="color_b5fffaac">#B5FFFAAC</color>
+    <color name="color_a3b5fbff">#A3B5FBFF</color>
+    <color name="color_c2e4c2ff">#C2E4C2FF</color>
+
+
+
+    <color name="color_1A1A1B">#1A1A1B</color>
 </resources>
