--- a/CommonLibrary/src/main/res/values/themes.xml
+++ b/CommonLibrary/src/main/res/values/themes.xml
@@ -1,35 +1,200 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.ProjectMVI" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
-    </style>
 
-
-    <style name="Theme.SplashScreen" parent="Theme.SplashScreenBase">
-        <!--   用特定的单一颜色填充背景     -->
+    <!-- 欢迎界面样式  启动页面样式  解决启动时白屏问题-->
+    <style name="CommonAppTheme.WelcomeTheme" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenAnimationDuration">1000</item>
         <item name="windowSplashScreenBackground">@color/color_white</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher</item>
+        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
+        <item name="postSplashScreenTheme">@style/Theme.App</item>
     </style>
 
-    <style name="Theme.SplashScreenBase" parent="Theme.MaterialComponents.NoActionBar">
-        <item name="android:windowBackground">@color/color_white</item>
-        <item name="android:opacity">opaque</item>
-        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-        <item name="android:fitsSystemWindows">false</item>
+    <!-- 欢迎界面样式  启动页面样式  解决启动时白屏问题-->
+    <style name="Theme.App" parent="Theme.AppCompat.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:configChanges">orientation|keyboardHidden|navigation</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowBackground">@color/color_transparent</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
-<!--        <item name="postSplashScreenTheme">@style/Theme.ProjectMVI</item>-->
-        <item name="windowSplashScreenAnimationDuration">1000</item>
+    </style>
+
+    <style name="LoadingDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <!-- 设置背景色 透明-->
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <!-- 设置是否显示背景 -->
+        <item name="android:backgroundDimEnabled">false</item>
+        <!-- 设置背景透明度 -->
+        <!--        <item name="android:backgroundDimAmount">0.6</item>-->
+        <!-- 设置点击空白不消失 -->
+        <item name="android:windowCloseOnTouchOutside">false</item>
+    </style>
+
+    <style name="BottomSheetDialogTransparentTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:background">@android:color/transparent</item><!--边框-->
+        <item name="android:windowFrame">@null</item><!--边框-->
+        <!--        <item name="android:windowIsFloating">true</item>&lt;!&ndash;是否浮现在activity之上&ndash;&gt;-->
+        <item name="android:windowIsTranslucent">false</item><!--半透明-->
+        <item name="android:windowNoTitle">true</item><!--无标题-->
+        <item name="android:windowBackground">@android:color/transparent</item><!--背景透明-->
+        <item name="android:backgroundDimEnabled">false</item><!--模糊-->
+        <item name="android:windowSoftInputMode">adjustResize</item>
+        <item name="android:windowIsFloating">false</item>
+    </style>
+
+    <style name="BottomSheetDialogMaskTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:background">@android:color/transparent</item><!--边框-->
+        <item name="android:windowFrame">@null</item><!--边框-->
+        <!--        <item name="android:windowIsFloating">true</item>&lt;!&ndash;是否浮现在activity之上&ndash;&gt;-->
+        <item name="android:windowIsTranslucent">false</item><!--半透明-->
+        <item name="android:windowNoTitle">true</item><!--无标题-->
+        <item name="android:windowBackground">@android:color/transparent</item><!--背景透明-->
+        <item name="android:backgroundDimEnabled">true</item><!--模糊-->
+        <item name="android:windowSoftInputMode">adjustResize</item>
+        <item name="android:windowIsFloating">false</item>
+    </style>
+
+    <style name="NiceDialogHasMask" parent="@android:style/Theme.Dialog">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowSoftInputMode">adjustPan</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimEnabled">true</item><!--模糊-->
+        <item name="android:background">@android:color/transparent</item><!--边框-->
+    </style>
+
+    <style name="NiceDialogNoMask" parent="@android:style/Theme.Dialog">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowSoftInputMode">adjustPan</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimEnabled">false</item><!--模糊-->
+        <item name="android:background">@android:color/transparent</item><!--边框-->
+    </style>
+
+    <!-- 底部弹出动画 -->
+    <style name="patPatBottomAnim" parent="android:Animation">
+        <item name="android:windowEnterAnimation">@anim/dialog_bottom_in</item>
+        <item name="android:windowExitAnimation">@anim/dialog_bottom_out</item>
+    </style>
+
+    <style name="DefaultAnimation" parent="android:Animation">
+        <item name="android:windowEnterAnimation">@anim/enter_anim</item>
+        <item name="android:windowExitAnimation">@anim/exit_anim</item>
+    </style>
+
+    <style name="StyleProgressBarMini" parent="@android:style/Widget.ProgressBar.Horizontal">
+        <item name="android:indeterminateOnly">false</item>
+        <item name="android:indeterminateDrawable">
+            @android:drawable/progress_indeterminate_horizontal
+        </item>
+        <item name="android:progressDrawable">@drawable/shape_progressbar_mini</item>
+    </style>
+
+    <style name="roundedCorner12ImageStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/qb_px_12</item>
+    </style>
+
+    <style name="roundedCornerTop20ImageStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopLeft">@dimen/qb_px_20</item>
+        <item name="cornerSizeTopRight">@dimen/qb_px_20</item>
+    </style>
+
+    <style name="roundedCornerTop12ImageStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopLeft">@dimen/qb_px_12</item>
+        <item name="cornerSizeTopRight">@dimen/qb_px_12</item>
+    </style>
+
+    <style name="roundedCornerTop16ImageStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopLeft">@dimen/qb_px_16</item>
+        <item name="cornerSizeTopRight">@dimen/qb_px_16</item>
+    </style>
+
+    <style name="roundedCornerEnd16ImageStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopRight">@dimen/qb_px_16</item>
+        <item name="cornerSizeBottomRight">@dimen/qb_px_16</item>
+    </style>
+
+    <style name="roundedCornerStart16ImageStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopLeft">@dimen/qb_px_16</item>
+        <item name="cornerSizeBottomLeft">@dimen/qb_px_16</item>
+    </style>
+
+    <style name="roundedCorner16ImageStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/qb_px_16</item>
+    </style>
+
+    <style name="roundedCorner14ImageStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/qb_px_14</item>
+    </style>
+
+    <style name="roundedCorner18ImageStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/qb_px_18</item>
+    </style>
+
+    <style name="roundedCorner19ImageStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/qb_px_19</item>
+    </style>
+
+
+    <style name="roundedCorner20ImageStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/qb_px_20</item>
+    </style>
+
+    <style name="roundedCorner22ImageStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/qb_px_22</item>
+    </style>
+
+    <style name="roundedCorner10ImageStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/qb_px_10</item>
+    </style>
+
+    <style name="roundedCorner8ImageStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/qb_px_8</item>
+    </style>
+
+    <style name="roundedCorner6ImageStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/qb_px_6</item>
+    </style>
+
+    <style name="roundedCorner42ImageStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/qb_px_42</item>
+    </style>
+    <style name="roundedCorner44ImageStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/qb_px_44</item>
+    </style>
+
+    <style name="roundedCircleImageStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
     </style>
 
 </resources>
