--- a/CommonLibrary/src/main/res/values/themes.xml
+++ b/CommonLibrary/src/main/res/values/themes.xml
@@ -18,7 +18,7 @@
         <item name="android:configChanges">orientation|keyboardHidden|navigation</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowBackground">@color/color_transparent</item>
+        <item name="android:windowBackground">@color/color_white</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
