--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".fragment.SplashFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/mStartTv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
