--- a/CommonLibrary/src/main/res/values/colors.xml
+++ b/CommonLibrary/src/main/res/values/colors.xml
@@ -27,6 +27,7 @@
     <color name="color_ff58595f">#58595F</color>
     <color name="color_91e075b4">#91E075B4</color>
     <color name="color_fff5f7f9">#F5F7F9</color>
+    <color name="color_49c9fa">#49C9FA</color>
     <color name="color_ffff8a9b">#FF8A9B</color>
     <color name="color_6db8f0">#6DB8F0</color>
     <color name="color_ffb3f1">#FFB3F1</color>
