--- a/app/src/main/res/drawable/download_progress_back.xml
+++ b/app/src/main/res/drawable/download_progress_back.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="@dimen/qb_px_16"/>
-    <solid android:color="@color/color_white"/>
-    <stroke android:width="@dimen/qb_px_2" android:color="@color/color_black"/>
+    <corners android:radius="@dimen/qb_px_5"/>
+    <solid android:color="@color/color_black_50"/>
+    <stroke android:width="@dimen/qb_px_2" android:color="@color/color_black_50"/>
 
 </shape>
